@@ -1,3 +1,7 @@
+2005-03-20 Borut Razem <borut.razem AT siol.net>
+
+	* support/scripts/inc2h.pl: WIN32 port
+
 2005-03-19 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/lib/makefile.in: added abs.c and labs.c
